compiler/hachi-hir/tests/snapshots/function_module_synthesis_tests__lowering.snap
---
source: compiler/hachi-hir/tests/function_module_synthesis_tests.rs
expression: doc
input_file: compiler/hachi-hir/tests/data/function_module_synthesis/generic_function_synthesis.test
snapshot_kind: text
---
module {
  // module types
  
  
  // module functions
  fn id<T>(x: T) -> T {
    return x;
  }
  intrinsic_fn malloc<T>(size: i32) -> *T;
  fn tx<T, U>(x: i32, y: T) -> *U {
    return malloc::<>(x);
  }
}
