compiler/hachi-hir/tests/snapshots/function_module_synthesis_tests__type-checked.snap
---
source: compiler/hachi-hir/tests/function_module_synthesis_tests.rs
expression: doc
input_file: compiler/hachi-hir/tests/data/function_module_synthesis/generic_function_synthesis.test
snapshot_kind: text
---
module {
  // module types
  
  
  // module functions
  fn id<$0>(x: $0) -> $0 {
    return x;
  }
}
